// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {Foo} from './foo';

const foo: Foo = new Foo();

foo.foo();

=====================================output=====================================
// @flow

import { Foo } from "./foo";

const foo: Foo = new Foo();

foo.foo();

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export class Foo {
  foo(): void {}
}

=====================================output=====================================
// @flow

export class Foo {
  foo(): void {}
}

================================================================================
`;
